# rest_framework-stubs

./: MANIFEST.in  README.md  example_usage.py  pyproject.toml  setup.cfg  setup.py  test_install.sh  verify_package.sh
