[metadata]
name = djangorestframework-stubs
version = 0.1.0
author = Your Name
author_email = your.email@example.com
description = Type stubs for Django REST Framework
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/foxman2/rest_framework-stubs
license = MIT
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Typing :: Typed

[options]
packages = find:
python_requires = >=3.7
install_requires =
    djangorestframework>=3.12
zip_safe = False
include_package_data = True

[options.packages.find]
include = rest_framework*

[options.package_data]
rest_framework = py.typed, *.pyi
rest_framework.authtoken = *.pyi
rest_framework.authtoken.management = *.pyi
rest_framework.authtoken.management.commands = *.pyi
rest_framework.management = *.pyi
rest_framework.management.commands = *.pyi
rest_framework.schemas = *.pyi
rest_framework.templatetags = *.pyi
rest_framework.utils = *.pyi
